--- a/.devops/deploy-pipelines.yml
+++ b/.devops/deploy-pipelines.yml
@@ -113,6 +113,7 @@ stages:
               jdkArchitectureOption: x64
               jdkSourceOption: 'PreInstalled'
           - script: |
+              ls
               ./mvnw validate -PinstallCommons
             displayName: "Install commons library"
           - script: |
@@ -283,7 +284,7 @@ stages:
             inputs:
               versionSpec: "21"
               jdkArchitectureOption: x64
-              jdkSourceOption: 'PreInstalled'
+              jdkSourceOption: 'AzureStorage'
           - script: |
               ./mvnw validate -PinstallCommons
             displayName: "Install commons library"
