chore: test deployment pipeline integration tests

--- a/.devops/deploy-pipelines.yml
+++ b/.devops/deploy-pipelines.yml
@@ -118,8 +118,10 @@ stages:
             workingDirectory: ./integration_tests
           - script: |
               cp .env.dev .env
-              sed -i "s/^QUEUE_TRANSIENT_CONNECTION_STRING=.*$/QUEUE_TRANSIENT_CONNECTION_STRING=$(DEV_TRANSIENT_STORAGE_CONNECTION_STRING)/" .env
-              sed -i "s/^MONGO_PASSWORD=.*$/MONGO_PASSWORD=$(DEV_MONGO_ECOMMERCE_PASSWORD)/" .env
+              ESCAPED_CONNECTION_STRING=$(printf '%s\n' "$(DEV_TRANSIENT_STORAGE_CONNECTION_STRING)" | sed -e 's/[\/&]/\\&/g')
+              ESCAPED_PASSWORD=$(printf '%s\n' "$(DEV_MONGO_ECOMMERCE_PASSWORD)" | sed -e 's/[\/&]/\\&/g')
+              sed -i "s|^QUEUE_TRANSIENT_CONNECTION_STRING=.*$|QUEUE_TRANSIENT_CONNECTION_STRING=$ESCAPED_CONNECTION_STRING|" .env
+              sed -i "s/^MONGO_PASSWORD=.*$/MONGO_PASSWORD=$ESCAPED_PASSWORD/" .env
               export $(grep -v '^#' .env | xargs)
               ./mvnw test -PintegrationTests
             displayName: "Execute pending transaction code review tests"
@@ -292,8 +294,10 @@ stages:
             workingDirectory: ./integration_tests
           - script: |
               cp .env.uat .env
-              sed -i "s/^QUEUE_TRANSIENT_CONNECTION_STRING=.*$/QUEUE_TRANSIENT_CONNECTION_STRING=$(UAT_TRANSIENT_STORAGE_CONNECTION_STRING)/" .env
-              sed -i "s/^MONGO_PASSWORD=.*$/MONGO_PASSWORD=$(UAT_MONGO_ECOMMERCE_PASSWORD)/" .env
+              ESCAPED_CONNECTION_STRING=$(printf '%s\n' "$(UAT_TRANSIENT_STORAGE_CONNECTION_STRING)" | sed -e 's/[\/&]/\\&/g')
+              ESCAPED_PASSWORD=$(printf '%s\n' "$(UAT_MONGO_ECOMMERCE_PASSWORD)" | sed -e 's/[\/&]/\\&/g')
+              sed -i "s|^QUEUE_TRANSIENT_CONNECTION_STRING=.*$|QUEUE_TRANSIENT_CONNECTION_STRING=$ESCAPED_CONNECTION_STRING|" .env
+              sed -i "s/^MONGO_PASSWORD=.*$/MONGO_PASSWORD=$ESCAPED_PASSWORD/" .env
               export $(grep -v '^#' .env | xargs)
               ./mvnw test -PintegrationTests
             displayName: "Execute pending transaction code review tests"
