--- a/.devops/deploy-pipelines.yml
+++ b/.devops/deploy-pipelines.yml
@@ -292,7 +292,7 @@ stages:
               ESCAPED_PASSWORD=$(echo "$(UAT_MONGO_ECOMMERCE_PASSWORD)" | sed -e 's/[\/&]/\\&/g')
               sed -i "s/^QUEUE_TRANSIENT_CONNECTION_STRING=.*$/QUEUE_TRANSIENT_CONNECTION_STRING=$ESCAPED_CONNECTION_STRING/" .env
               sed -i "s/^MONGO_PASSWORD=.*$/MONGO_PASSWORD=$ESCAPED_PASSWORD/" .env
-              docker run --mount type=bind,src=$PWD,dst=/workspace/app test integration
+              docker run --mount type=bind,src=$PWD,dst=/workspace/app maven_test_runner integration
             displayName: "Execute pending transaction code review tests"
             workingDirectory: ./integration_tests
           - task: PublishTestResults@2
