--- a/.devops/deploy-pipelines.yml
+++ b/.devops/deploy-pipelines.yml
@@ -106,7 +106,12 @@ stages:
       - job: execute_integration_tests
         steps:
           - checkout: pagopaEcommerceTests
-            path: ./s/pagopa-ecommerce-tests
+            path: ./pagopa-ecommerce-tests
+          - task: CopyFiles@2
+            inputs:
+              SourceFolder: $(Pipeline.Workspace)/s/pagopa-ecommerce-tests
+              Contents: '**'
+              TargetFolder: $(Agent.TempDirectory)/pagopa-ecommerce-tests
           - task: JavaToolInstaller@0
             displayName: 'Installing JDK 21'
             inputs:
@@ -116,7 +121,7 @@ stages:
           - script: |
               ./mvnw validate -PinstallCommons
             displayName: "Install commons library"
-            workingDirectory: ./integration_tests
+            workingDirectory: $(Agent.TempDirectory)/pagopa-ecommerce-tests/integration_tests
           - script: |
               cp .env.dev .env
               ESCAPED_CONNECTION_STRING=$(echo "$(DEV_TRANSIENT_STORAGE_CONNECTION_STRING)" | sed -e 's/[\/&]/\\&/g')
@@ -126,7 +131,7 @@ stages:
               export $(grep -v '^#' .env | xargs)
               ./mvnw test -PintegrationTests
             displayName: "Execute pending transaction code review tests"
-            workingDirectory: ./integration_tests
+            workingDirectory: $(Agent.TempDirectory)/pagopa-ecommerce-tests/integration_tests
           - task: PublishTestResults@2
             inputs:
               testResultsFormat: 'JUnit'
@@ -284,11 +289,16 @@ stages:
       - job: execute_integration_tests
         steps:
           - checkout: pagopaEcommerceTests
-            path: ./s/pagopa-ecommerce-tests
+            path: ./pagopa-ecommerce-tests
+          - task: CopyFiles@2
+            inputs:
+              SourceFolder: $(Pipeline.Workspace)/s/pagopa-ecommerce-tests
+              Contents: '**'
+              TargetFolder: $(Agent.TempDirectory)/pagopa-ecommerce-tests
           - script: |
               docker build -t maven_test_runner .
             displayName: "Build docker test image runner"
-            workingDirectory: ./integration_tests
+            workingDirectory: $(Agent.TempDirectory)/pagopa-ecommerce-tests/integration_tests
           - script: |
               cp .env.uat .env
               ESCAPED_CONNECTION_STRING=$(echo "$(UAT_TRANSIENT_STORAGE_CONNECTION_STRING)" | sed -e 's/[\/&]/\\&/g')
@@ -297,7 +307,7 @@ stages:
               sed -i "s/^MONGO_PASSWORD=.*$/MONGO_PASSWORD=$ESCAPED_PASSWORD/" .env
               docker run --mount type=bind,src=$PWD,dst=/workspace/app maven_test_runner integration
             displayName: "Execute pending transaction code review tests"
-            workingDirectory: ./integration_tests
+            workingDirectory: $(Agent.TempDirectory)/pagopa-ecommerce-tests/integration_tests
           - task: PublishTestResults@2
             inputs:
               testResultsFormat: 'JUnit'
