--- a/.devops/deploy-pipelines.yml
+++ b/.devops/deploy-pipelines.yml
@@ -114,12 +114,21 @@ stages:
                     GREEN_VERSION: $(Build.SourceVersion)
                     BLUE_VERSION: $(Build.SourceVersion)
   - stage: IntegrationTestDev
+    displayName: "Integration test for DEV environment"
     dependsOn:
       - Deploy_for_DEV
+    condition: |
+      eq(dependencies.Deploy_for_DEV.result, 'Succeeded')
     jobs:
-      - job: make_integration_test
+      - job: execute_integration_tests
         steps:
           - checkout: pagopaEcommerceTests
+            path: ./pagopa-ecommerce-tests
+          - task: CopyFiles@2
+            inputs:
+              SourceFolder: $(Pipeline.Workspace)/pagopa-ecommerce-tests
+              Contents: '**'
+              TargetFolder: $(Agent.TempDirectory)/pagopa-ecommerce-tests
           - task: JavaToolInstaller@0
             displayName: 'Installing JDK 21'
             inputs:
@@ -128,21 +137,24 @@ stages:
               jdkSourceOption: 'PreInstalled'
           - script: |
               ./mvnw validate -PinstallCommons
-            workingDirectory: pagopa-ecommerce-tests/integration_tests
             displayName: "Install commons library"
+            workingDirectory: $(Agent.TempDirectory)/pagopa-ecommerce-tests/integration_tests
           - script: |
               cp .env.dev .env
-              sed -i "s/^QUEUE_TRANSIENT_CONNECTION_STRING=.*$/QUEUE_TRANSIENT_CONNECTION_STRING=$(DEV_TRANSIENT_STORAGE_CONNECTION_STRING)/" .env
-              sed -i "s/^MONGO_PASSWORD=.*$/MONGO_PASSWORD=$(DEV_MONGO_ECOMMERCE_PASSWORD)/" .env
+              ESCAPED_CONNECTION_STRING=$(echo "$(DEV_TRANSIENT_STORAGE_CONNECTION_STRING)" | sed -e 's/[\/&]/\\&/g')
+              ESCAPED_PASSWORD=$(echo "$(DEV_MONGO_ECOMMERCE_PASSWORD)" | sed -e 's/[\/&]/\\&/g')
+              sed -i "s/^QUEUE_TRANSIENT_CONNECTION_STRING=.*$/QUEUE_TRANSIENT_CONNECTION_STRING=$ESCAPED_CONNECTION_STRING/" .env
+              sed -i "s/^MONGO_PASSWORD=.*$/MONGO_PASSWORD=$ESCAPED_PASSWORD/" .env
               export $(grep -v '^#' .env | xargs)
               ./mvnw test -PintegrationTests
-            workingDirectory: pagopa-ecommerce-tests/integration_tests
             displayName: "Execute pending transaction code review tests"
+            workingDirectory: $(Agent.TempDirectory)/pagopa-ecommerce-tests/integration_tests
           - task: PublishTestResults@2
             inputs:
               testResultsFormat: 'JUnit'
               testResultsFiles: '**/TEST-*.xml'
-              searchFolder: '$(System.DefaultWorkingDirectory)'
+              searchFolder: '$(Agent.TempDirectory)'
+              testRunTitle: "DEV integration tests"
   # --- START Deploy UAT --- #
   - stage: "Build_release_candidate"
     displayName: 'Build release candidate'
@@ -317,37 +329,42 @@ stages:
                     GREEN_VERSION: $(app_version)
 
   - stage: IntegrationTestUat
+    displayName: "Integration tests for UAT environment"
     dependsOn:
       - Deploy_UAT_Green
+    condition: |
+      eq(dependencies.Deploy_UAT_Green.result, 'Succeeded')
     pool:
       name: pagopa-uat-linux
     jobs:
-      - job: make_integration_test
+      - job: execute_integration_tests
         steps:
           - checkout: pagopaEcommerceTests
-          - task: JavaToolInstaller@0
-            displayName: 'Installing JDK 21'
+            path: ./pagopa-ecommerce-tests
+          - task: CopyFiles@2
             inputs:
-              versionSpec: "21"
-              jdkArchitectureOption: x64
-              jdkSourceOption: 'PreInstalled'
+              SourceFolder: $(Pipeline.Workspace)/pagopa-ecommerce-tests
+              Contents: '**'
+              TargetFolder: $(Agent.TempDirectory)/pagopa-ecommerce-tests
           - script: |
-              ./mvnw validate -PinstallCommons
-            workingDirectory: pagopa-ecommerce-tests/integration_tests
-            displayName: "Install commons library"
+              docker build -t maven_test_runner .
+            displayName: "Build docker test image runner"
+            workingDirectory: $(Agent.TempDirectory)/pagopa-ecommerce-tests/integration_tests
           - script: |
               cp .env.uat .env
-              sed -i "s/^QUEUE_TRANSIENT_CONNECTION_STRING=.*$/QUEUE_TRANSIENT_CONNECTION_STRING=$(UAT_TRANSIENT_STORAGE_CONNECTION_STRING)/" .env
-              sed -i "s/^MONGO_PASSWORD=.*$/MONGO_PASSWORD=$(UAT_MONGO_ECOMMERCE_PASSWORD)/" .env
-              export $(grep -v '^#' .env | xargs)
-              ./mvnw test -PintegrationTests
-            workingDirectory: pagopa-ecommerce-tests/integration_tests
+              ESCAPED_CONNECTION_STRING=$(echo "$(UAT_TRANSIENT_STORAGE_CONNECTION_STRING)" | sed -e 's/[\/&]/\\&/g')
+              ESCAPED_PASSWORD=$(echo "$(UAT_MONGO_ECOMMERCE_PASSWORD)" | sed -e 's/[\/&]/\\&/g')
+              sed -i "s/^QUEUE_TRANSIENT_CONNECTION_STRING=.*$/QUEUE_TRANSIENT_CONNECTION_STRING=$ESCAPED_CONNECTION_STRING/" .env
+              sed -i "s/^MONGO_PASSWORD=.*$/MONGO_PASSWORD=$ESCAPED_PASSWORD/" .env
+              docker run --mount type=bind,src=$PWD,dst=/workspace/app maven_test_runner integration
             displayName: "Execute pending transaction code review tests"
+            workingDirectory: $(Agent.TempDirectory)/pagopa-ecommerce-tests/integration_tests
           - task: PublishTestResults@2
             inputs:
               testResultsFormat: 'JUnit'
               testResultsFiles: '**/TEST-*.xml'
-              searchFolder: '$(System.DefaultWorkingDirectory)'
+              searchFolder: '$(Agent.TempDirectory)'
+              testRunTitle: "UAT integration tests"
   # --- END Deploy UAT --- #
 
   # --- START Deploy PROD --- #
