--- a/.devops/code-review-pipelines.yml
+++ b/.devops/code-review-pipelines.yml
@@ -17,7 +17,7 @@ resources:
     - repository: pagopaEcommerceTests
       type: github
       name: pagopa/pagopa-ecommerce-tests
-      ref: CHK-4329-event-dispatcher-integration-tests
+      ref: main
       endpoint: 'io-azure-devops-github-ro'
 
 stages:
