--- a/.devops/deploy-pipelines.yml
+++ b/.devops/deploy-pipelines.yml
@@ -129,15 +129,9 @@ stages:
               SourceFolder: $(Pipeline.Workspace)/pagopa-ecommerce-tests
               Contents: '**'
               TargetFolder: $(Agent.TempDirectory)/pagopa-ecommerce-tests
-          - task: JavaToolInstaller@0
-            displayName: 'Installing JDK 21'
-            inputs:
-              versionSpec: "21"
-              jdkArchitectureOption: x64
-              jdkSourceOption: 'PreInstalled'
           - script: |
-              ./mvnw validate -PinstallCommons
-            displayName: "Install commons library"
+              docker build -t maven_test_runner .
+            displayName: "Build docker test image runner"
             workingDirectory: $(Agent.TempDirectory)/pagopa-ecommerce-tests/integration_tests
           - script: |
               cp .env.dev .env
@@ -145,8 +139,7 @@ stages:
               ESCAPED_PASSWORD=$(echo "$(DEV_MONGO_ECOMMERCE_PASSWORD)" | sed -e 's/[\/&]/\\&/g')
               sed -i "s/^QUEUE_TRANSIENT_CONNECTION_STRING=.*$/QUEUE_TRANSIENT_CONNECTION_STRING=$ESCAPED_CONNECTION_STRING/" .env
               sed -i "s/^MONGO_PASSWORD=.*$/MONGO_PASSWORD=$ESCAPED_PASSWORD/" .env
-              export $(grep -v '^#' .env | xargs)
-              ./mvnw test -PintegrationTests
+              docker run --mount type=bind,src=$PWD,dst=/workspace/app maven_test_runner integration
             displayName: "Execute pending transaction code review tests"
             workingDirectory: $(Agent.TempDirectory)/pagopa-ecommerce-tests/integration_tests
           - task: PublishTestResults@2
