--- a/.devops/code-review-pipelines.yml
+++ b/.devops/code-review-pipelines.yml
@@ -113,21 +113,15 @@ stages:
             workingDirectory: pagopa-ecommerce-local
             continueOnError: false
           - checkout: pagopaEcommerceTests
-          - task: JavaToolInstaller@0
-            displayName: 'Installing JDK 21'
-            inputs:
-              versionSpec: "21"
-              jdkArchitectureOption: x64
-              jdkSourceOption: 'PreInstalled'
           - script: |
-              ./mvnw validate -PinstallCommons
+              docker build -t maven_test_runner .
+            displayName: "Build docker test image runner"
             workingDirectory: pagopa-ecommerce-tests/integration_tests
-            displayName: "Install commons library"
           - script: |
-              export $(grep -v '^#' .env.example | xargs)
-              ./mvnw test -PcodeReviewTests
-            workingDirectory: pagopa-ecommerce-tests/integration_tests
+              cp .env.example .env
+              docker run --mount type=bind,src=$PWD,dst=/workspace/app maven_test_runner integration
             displayName: "Execute pending transaction code review tests"
+            workingDirectory: pagopa-ecommerce-tests/integration_tests
           - task: PublishTestResults@2
             inputs:
               testResultsFormat: 'JUnit'
